gcc/testsuite/g++.dg/cpp1z/pr84533.C
// { dg-do compile { target c++17 } }

enum E { e, e };  // { dg-error "redefinition" }
